Image resizer improved

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -2115,7 +2115,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
     <big><br style="text-decoration: underline;">
       <span style="text-decoration: underline;"> Core classes</span><br>
       <br>
-      All engine core classes declared in <span style="font-style: italic;">Core</span>
+      All engine core classes and functions declared in <span style="font-style: italic;">Core</span>
       sub–namespace.<br>
       <br>
     </big> <big><span style="font-style: italic;"> FPS</span> implement fps
@@ -2582,6 +2582,7 @@ Multimedia API</a>. </big>
       7.6.4 – Small bug in tile–map subsystem fixed.<br>
       7.6.5 – Coordinates conversion subsystem improved.<br>
       7.6.6 – Base graphics subsystem improved.<br>
+      7.6.7 – 7.6.8 – Image resizer improved.<br>
     </big>
     <p></p>
     <big> </big>
