--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -2582,7 +2582,8 @@ Multimedia API</a>. </big>
       7.6.4 – Small bug in tile–map subsystem fixed.<br>
       7.6.5 – Coordinates conversion subsystem improved.<br>
       7.6.6 – Base graphics subsystem improved.<br>
-      7.6.7 – 7.7 – Image resizer improved.<br>
+      7.6.7 – 7.7.1 – Image resizer improved.<br>
+      7.7.2 – Small changes.<br>
     </big>
     <p></p>
     <big> </big>
