Small bug fixed

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -2584,6 +2584,7 @@ Multimedia API</a>. </big>
       7.6.6 – Base graphics subsystem improved.<br>
       7.6.7 – 7.7.1 – Image resizer improved.<br>
       7.7.2 – 7.7.3 – Small changes.<br>
+      7.7.4 – Small bug fixed.<br>
     </big>
     <p></p>
     <big> </big>
