--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -2585,7 +2585,7 @@ Multimedia API</a>. </big>
       7.6.7 – 7.7.1 – Image resizer improved.<br>
       7.7.2 – 7.7.3 – Small changes.<br>
       7.7.4 – Small bug fixed.<br>
-      7.7.5 – Image resizer improved.<br>
+      7.7.5 – 7.7.6 – Image resizer improved.<br>
     </big>
     <p></p>
     <big> </big>
