--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -2635,11 +2635,12 @@ Multimedia API</a>. </big>
       7.7.2 – 7.7.3 – Small changes.<br>
       7.7.4 – Small bug fixed.<br>
       7.7.5 – 7.7.6 – Image resizer improved.<br>
-    </big><big>7.7.7 – Small changes.<br>
-    </big><big>7.7.8 – Isometric level subsystem improved.<br>
-    </big><big>7.7.9 – Isometric subsystem improved.<br>
-    </big><big>7.8 – Small changes.<br>
+      7.7.7 – Small changes.<br>
+      7.7.8 – Isometric level subsystem improved.<br>
+      7.7.9 – Isometric subsystem improved.<br>
+      7.8 – Small changes.<br>
       7.8.1 – Isometric subsystem improved.<br>
+      7.8.2 – Small changes.<br>
     </big>
     <p></p>
     <big> </big>
