--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -2655,6 +2655,7 @@ Multimedia API</a>. </big>
       7.8.1 – Isometric subsystem improved.<br>
       7.8.2 – 7.8.3 – Small changes.<br>
       7.8.4 – Isometric level subsystem improved.<br>
+      7.8.5 – Small changes.<br>
     </big>
     <p></p>
     <big> </big>
