Sprite sheet subsystem improved

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -882,11 +882,19 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       and <span style="font-style: italic;">Animation</span>. Let's look at
       public methods.<br>
       <br>
+      <span style="font-style: italic;">bool Sheet::check_row(const unsigned int
+        target) const;</span> – Return true if target row is valid.<br>
+      <br>
+      <span style="font-style: italic;">bool Sheet::check_column(const unsigned
+        int target) const;</span> – Return true if target column is valid.<br>
+      <br>
     </big><big style="font-style: italic;"> unsigned int Sheet::get_row(</big><big
+
       style="font-style: italic;">const unsigned int target</big><big><span style="font-style: italic;">)
         const;</span> – Return row of target frame.<br>
       <br>
       <span style="font-style: italic;"> unsigned int Sheet::get_column(</span></big><big
+
       style="font-style: italic;">const unsigned int target</big><big><span style="font-style: italic;">)
         const;</span> – Return</big><big> column</big><big> </big><big>of
       target frame</big><big>.<br>
@@ -1253,10 +1261,12 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Get target cartesian y-coordinate </big><big>from the row and column.<br>
       <br>
     </big><big><span style="font-style: italic;">int World::get_row(const int x,</span></big><big
+
       style="font-style: italic;">const int y</big><big><span style="font-style: italic;">)
         const;</span> – Get the row from target point.<br>
       <br>
       <span style="font-style: italic;">int World::get_column(const int y</span></big><big
+
       style="font-style: italic;">,</big><big style="font-style: italic;">const
       int y</big><big><span style="font-style: italic;">) const;</span> – Get
       the column</big><big> from target point.<br>
@@ -1513,12 +1523,10 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Exit from your program and return user to operating system.<br>
       <br>
       <span style="font-style: italic;">bool enable_logging(const char *name); </span></big><big>–</big><big><span
-
         style="font-style: italic;"></span> Enable redirecting error messages to
       a log file and return false if the operation failed.<br>
       <br>
       <span style="font-style: italic;">void randomize(); </span></big><big>–</big><big><span
-
         style="font-style: italic;"></span> Initialize random number generator.<br>
       <br>
       <span style="font-style: italic;">unsigned int get_random(const int
@@ -2659,7 +2667,8 @@ Multimedia API</a>. </big>
       7.8.4 – Isometric level subsystem improved.<br>
       7.8.5 – Small changes.<br>
       7.8.6 – Animation subsystem improved.<br>
-    </big>
+    </big><big>7.8.7 – Sprite sheet subsystem improved.<br>
+    </big><big> 7.8.8 – Small changes.</big><br>
     <p></p>
     <big> </big>
   </body>
