--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -2634,8 +2634,7 @@ Multimedia API</a>. </big>
       7.2.6 – 7.2.9 – Image resizer improved.<br>
       7.3 – 7.3.1 – Small changes.<br>
       7.3.2 – Small render bug fixed.<br>
-      7.3.3 – Animation subsystem back-ported from Eugene game development kit
-      5.6.2.<br>
+      7.3.3 – Animation subsystem back-ported from Eugene game development kit 5.6.2.<br>
       7.3.4 – Background subsystem improved.<br>
       7.3.5 – Small changes.<br>
       7.3.6 – Source code synced with Simple windows game framework 7.3.5.<br>
@@ -2675,6 +2674,7 @@ Multimedia API</a>. </big>
       7.8.7 – Sprite sheet subsystem improved.<br>
       7.8.8 – Small changes.<br>
       7.8.9 – Base sprite subsystem improved.<br>
+      7.9 – Text drawing subsystem improved.<br>
     </big>
     <p></p>
     <big> </big>
