Base sprite subsystem improved

--- a/documentation/reference.html
+++ b/documentation/reference.html
@@ -330,7 +330,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       optimization.<br>
       <br>
       <span style="text-decoration: underline;"> Note for Visual C++ users</span><br
-
         style="text-decoration: underline;">
       <br>
       Disable pre–compiled headers before start compilation. Old Visual C++
@@ -743,6 +742,12 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
     </big> <big><i>unsigned int Billboard::decrease_y(const unsigned int
         decrement);</i> – Decrease y–coordinate with user value and return
       decreased y–position.<br>
+      <br>
+      <span style="font-style: italic;">unsigned int Billboard::get_start_x()
+        const;</span> – Return x–coordinate of start position.<br>
+      <br>
+      <span style="font-style: italic;">unsigned int Billboard::get_start_y()
+        const;</span> – Return y–coordinate of start position.<br>
       <br>
     </big><big> <span style="font-style: italic;"> unsigned int
         Billboard::get_x() const;</span> – Return x–coordinate of the sprite
@@ -1424,7 +1429,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       Return true if the column is valid.<br>
       <br>
       <span style="font-style: italic;">EUGENEGDK::BOX Tilemap::get_box(</span></big><big
-
       style="font-style: italic;">const </big><big style="font-style: italic;">unsigned
       int row,const unsigned int column</big><big><span style="font-style: italic;">)
         const;</span> – Return collision related information.<br>
@@ -2675,7 +2679,7 @@ Multimedia API</a>. </big>
       7.8.8 – Small changes.<br>
       7.8.9 – Base sprite subsystem improved.<br>
       7.9 – Text drawing subsystem improved.<br>
-    </big>
+    </big><big> 7.9.1 – Base sprite subsystem improved.</big><br>
     <p></p>
     <big> </big>
   </body>
